--- a/src/main/resources/be/mormont/iacf/boncom/ui/root_scene.fxml
+++ b/src/main/resources/be/mormont/iacf/boncom/ui/root_scene.fxml
@@ -4,23 +4,30 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.mormont.iacf.boncom.ui.RootSceneController">
+<?import javafx.scene.layout.VBox?>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.mormont.iacf.boncom.ui.RootSceneController">
    <top>
-      <Label text="Label" BorderPane.alignment="CENTER" fx:id="titleLabel" styleClass="title"/>
+      <Label fx:id="titleLabel" styleClass="title" text="Label" BorderPane.alignment="CENTER" />
    </top>
    <center>
-      <GridPane BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-      </GridPane>
+       <GridPane styleClass="rootMenu" BorderPane.alignment="CENTER" vgap="5" hgap="5">
+           <columnConstraints>
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="50.0" prefWidth="75.0" />
+               <ColumnConstraints hgrow="SOMETIMES" minWidth="50.0" prefWidth="75.0" />
+           </columnConstraints>
+           <rowConstraints>
+               <RowConstraints minHeight="50.0" prefHeight="75.0" vgrow="SOMETIMES" />
+           </rowConstraints>
+
+           <VBox fx:id="createOrderFormBox" styleClass="rootMenuItem" GridPane.columnIndex="0" GridPane.rowIndex="0">
+               <Label fx:id="createOrderFormLabel"/>
+           </VBox>
+           <VBox fx:id="createProviderBox" styleClass="rootMenuItem" GridPane.columnIndex="1" GridPane.rowIndex="0">
+               <Label fx:id="createProviderLabel"/>
+           </VBox>
+       </GridPane>
    </center>
 </BorderPane>
