add create provider modal

--- a/src/main/resources/be/mormont/iacf/boncom/ui/style.css
+++ b/src/main/resources/be/mormont/iacf/boncom/ui/style.css
@@ -19,3 +19,8 @@ Label.title {
 .rootMenuItem:hover {
     -fx-background-color: derive(goldenrod, +20%);
 }
+
+.gpForm {
+    -fx-padding: 5 10 10 5;
+}
+
