add purchaser field

--- a/src/main/resources/be/mormont/iacf/boncom/ui/order_form_form.fxml
+++ b/src/main/resources/be/mormont/iacf/boncom/ui/order_form_form.fxml
@@ -25,7 +25,10 @@
             </rowConstraints>
 
             <Label fx:id="numberFieldLabel" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <TextField fx:id="numberField" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="0" />
+            <TextField fx:id="numberField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+            <Label fx:id="purchaserFieldLabel" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+            <ComboBox fx:id="purchaserField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
 
         </GridPane>
     </center>
