--- a/src/main/resources/be/mormont/iacf/boncom/ui/order_form_form.fxml
+++ b/src/main/resources/be/mormont/iacf/boncom/ui/order_form_form.fxml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.mormont.iacf.boncom.ui.OrderFormFormController">
     <top>
         <Label fx:id="formTitle" styleClass="title" text="Label" BorderPane.alignment="CENTER" />
@@ -13,7 +20,7 @@
         <GridPane hgap="5" styleClass="gpForm" BorderPane.alignment="CENTER">
             <columnConstraints>
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="50.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="50.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="20.0" prefWidth="75.0" />
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="50.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="50.0" />
             </columnConstraints>
@@ -26,11 +33,13 @@
 
             <Label fx:id="numberFieldLabel" GridPane.columnIndex="0" GridPane.rowIndex="0" />
             <TextField fx:id="numberField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-            <Label fx:id="numberFieldMessageLabel" styleClass="formInfoLabel" GridPane.columnIndex="2" GridPane.rowIndex="0" GridPane.columnSpan="2"/>
+            <Label fx:id="numberFieldMessageLabel" styleClass="formInfoLabel" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="0" />
             <Label fx:id="purchaserFieldLabel" GridPane.columnIndex="0" GridPane.rowIndex="1" />
             <ComboBox fx:id="purchaserField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label fx:id="providerFieldLabel" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <ComboBox fx:id="providerField" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+            <Label fx:id="dateFieldLabel" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+            <DatePicker fx:id="dateField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
 
         </GridPane>
@@ -38,11 +47,11 @@
     <bottom>
         <ButtonBar BorderPane.alignment="CENTER">
             <padding>
-                <Insets bottom="10.0" left="10.0" right ="10.0" top="5.0"/>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
             </padding>
             <buttons>
-                <Button mnemonicParsing="false" text="Button" fx:id="cancelButton"/>
-                <Button mnemonicParsing="false" text="Button" fx:id="submitButton"/>
+                <Button fx:id="cancelButton" mnemonicParsing="false" text="Button" />
+                <Button fx:id="submitButton" mnemonicParsing="false" text="Button" />
             </buttons>
         </ButtonBar>
     </bottom>
