--- a/src/main/resources/be/mormont/iacf/boncom/ui/order_form_form.fxml
+++ b/src/main/resources/be/mormont/iacf/boncom/ui/order_form_form.fxml
@@ -57,6 +57,7 @@
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="400.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
             </rowConstraints>
 
             <Label fx:id="entriesTableLabel" GridPane.columnIndex="0" GridPane.rowIndex="0" />
@@ -73,9 +74,11 @@
                    <TableColumn fx:id="entriesTabColumnDesignation" styleClass="leftAlignedColumn" />
                    <TableColumn fx:id="entriesTabColumnQuantity" minWidth="20.0" styleClass="centeredColumn" />
                    <TableColumn fx:id="entriesTabColumnUnitPrice" minWidth="20.0" styleClass="centeredColumn" />
+                   <TableColumn fx:id="entriesTabColumnTotal" minWidth="20.0" styleClass="centeredColumn" />
                 </columns>
             </TableView>
-
+            <Label fx:id="totalFieldLabel" GridPane.rowIndex="2" GridPane.columnIndex="2" />
+            <Label fx:id="totalField" GridPane.rowIndex="2" GridPane.columnIndex="3" />
 
         </GridPane>
         </VBox>
