change cell type to custom to support commit focus loss

--- a/src/main/resources/be/mormont/iacf/boncom/ui/order_form_form.fxml
+++ b/src/main/resources/be/mormont/iacf/boncom/ui/order_form_form.fxml
@@ -64,8 +64,7 @@
             <ButtonBar GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="0" >
                 <buttons>
                     <Button fx:id="deleteEntryButton" mnemonicParsing="false" />
-                    <Button fx:id="editEntryButton" mnemonicParsing="false" />
-                    <Button fx:id="createEntryButton" mnemonicParsing="false" />
+                    <Button fx:id="addEntryButton" mnemonicParsing="false" />
                 </buttons>
             </ButtonBar>
             <TableView fx:id="entriesTable" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="4" >
