--- a/src/main/resources/be/mormont/iacf/boncom/ui/provider_form.fxml
+++ b/src/main/resources/be/mormont/iacf/boncom/ui/provider_form.fxml
@@ -26,7 +26,9 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
 
         <Label fx:id="nameFieldLabel" GridPane.columnIndex="0" GridPane.rowIndex="0" />
@@ -49,6 +51,10 @@
 
         <Label fx:id="phonesFieldLabel" GridPane.columnIndex="0" GridPane.rowIndex="4" />
         <TextField fx:id="phonesField" GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.columnSpan="3"/>
+
+        <Label fx:id="customerNbFieldLabel" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+        <TextField fx:id="customerNbField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+
       </GridPane>
    </center>
    <bottom>
