--- a/src/main/resources/be/mormont/iacf/boncom/ui/order_form_form.fxml
+++ b/src/main/resources/be/mormont/iacf/boncom/ui/order_form_form.fxml
@@ -14,8 +14,8 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-
 <?import javafx.scene.layout.VBox?>
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="be.mormont.iacf.boncom.ui.OrderFormFormController">
     <top>
         <Label fx:id="formTitle" styleClass="title" text="Label" BorderPane.alignment="CENTER" />
@@ -45,8 +45,10 @@
             <ComboBox fx:id="providerField" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <Label fx:id="dateFieldLabel" GridPane.columnIndex="0" GridPane.rowIndex="2" />
             <DatePicker fx:id="dateField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="deliveryDateFieldLabel" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <DatePicker fx:id="deliveryDateField" GridPane.columnIndex="3" GridPane.rowIndex="2" />
         </GridPane>
-        <Separator GridPane.columnIndex="0" GridPane.rowIndex="3" GridPane.columnSpan="4"/>
+        <Separator GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="3" />
         <GridPane hgap="5" styleClass="gpForm" BorderPane.alignment="CENTER">
             <columnConstraints>
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="50.0" />
@@ -61,14 +63,14 @@
             </rowConstraints>
 
             <Label fx:id="entriesTableLabel" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-            <ButtonBar GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="0" >
+            <ButtonBar GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="0">
                 <buttons>
                     <Button fx:id="deleteEntryButton" mnemonicParsing="false" />
                     <Button fx:id="addEntryButton" mnemonicParsing="false" />
                     <Button fx:id="searchEntryButton" mnemonicParsing="false" />
                 </buttons>
             </ButtonBar>
-            <TableView fx:id="entriesTable" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="4" >
+            <TableView fx:id="entriesTable" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="1">
                 <columns>
                    <TableColumn fx:id="entriesTabColumnReference" minWidth="20.0" styleClass="centeredColumn" />
                    <TableColumn fx:id="entriesTabColumnDesignation" styleClass="leftAlignedColumn" />
@@ -77,8 +79,8 @@
                    <TableColumn fx:id="entriesTabColumnTotal" minWidth="20.0" styleClass="centeredColumn" />
                 </columns>
             </TableView>
-            <Label fx:id="totalFieldLabel" GridPane.rowIndex="2" GridPane.columnIndex="2" />
-            <Label fx:id="totalField" GridPane.rowIndex="2" GridPane.columnIndex="3" />
+            <Label fx:id="totalFieldLabel" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Label fx:id="totalField" GridPane.columnIndex="3" GridPane.rowIndex="2" />
 
         </GridPane>
         </VBox>
