delete order forms

--- a/src/main/resources/be/mormont/iacf/boncom/ui/root_scene.fxml
+++ b/src/main/resources/be/mormont/iacf/boncom/ui/root_scene.fxml
@@ -51,6 +51,7 @@
                 <buttons>
                     <Button fx:id="orderFormEditButton" mnemonicParsing="false" />
                     <Button fx:id="orderFormExportButton" mnemonicParsing="false" />
+                    <Button fx:id="orderFormDeleteButton" mnemonicParsing="false" />
                     <Button fx:id="orderFormRefreshButton" mnemonicParsing="false" />
                 </buttons>
             </ButtonBar>
